--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Aurès Assogba-zehe</title>
+    <title>Développeur FullStack | Aurès Assogba-zehe</title>
+    <meta name="description"
+        content="Développeur Web Fullstack. Découvrez mon portfolio et boostez votre projet web avec des solutions modernes et performantes.">
+    <meta name="keywords" content="Full-Stack, Développement Web, Développement d'applications, VueJs, Laravel, React, Node.js, Portfolio, Aurès, Aurès Assogba-zehe">
+    <meta name="author" content="Aurès Assogba-zehe">
+    <meta property="og:title" content="Développeur Fullstack | Aurès Assogba-zehe">
+    <meta property="og:description" content="Développeur Web Fullstack. Découvrez mon portfolio et boostez votre projet web avec des solutions modernes et performantes.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png">
+    <link rel="manifest" href="./public/site.webmanifest">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +35,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <div class="flex-shrink-0 flex items-center">
-                    <span class="text-xl font-bold gradient-text">Aurès</span>
+                    <span class="text-xl font-bold gradient-text">Aurès AZ.</span>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-8">
@@ -103,7 +118,8 @@
                     </div>
                 </div>
                 <p class="text-lg text-slate-400">
-                    Je crée des applications web modernes et performantes avec les dernières technologies.
+                    Je résous des problèmes à travers des applications web modernes et performantes avec les dernières
+                    technologies.
                 </p>
                 <div class="flex space-x-4 pt-4">
                     <a href="#projects"
@@ -148,8 +164,8 @@
                         <img src="./public/images/aures-about.png" alt="Code" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-gradient-to-t from-slate-900/80 to-transparent"></div>
                         <div class="absolute bottom-0 left-0 p-6">
-                            <h3 class="text-xl font-bold">5+ années d'expérience</h3>
-                            <p class="text-slate-300">Dans le développement web</p>
+                            <h3 class="text-xl font-bold">Steve Jobs</h3>
+                            <p class="text-slate-300">"L'innovation, c'est ce qui distingue le leader du suiveur."</p>
                         </div>
                     </div>
                 </div>
@@ -157,7 +173,7 @@
             <div class="space-y-6">
                 <h3 class="text-2xl font-bold">Développeur Fullstack créatif et passionné</h3>
                 <p class="text-slate-400">
-                    Je suis un développeur fullstack avec plus de 5 ans d'expérience dans la création d'applications web
+                    Je suis un développeur fullstack focalisé dans la création d'applications web
                     modernes.
                     Je me spécialise dans les technologies JavaScript comme React, Node.js et Vue.js, mais j'ai
                     également une solide
@@ -180,20 +196,21 @@
                     </div>
                     <div class="flex items-center space-x-2">
                         <div class="w-2 h-2 rounded-full bg-indigo-500"></div>
-                        <span class="text-slate-300">Téléphone: <span class="text-white">+229 01 56 05 02 65</span></span>
+                        <span class="text-slate-300">Téléphone: <span class="text-white">+229 01 56 05 02
+                                65</span></span>
                     </div>
                     <div class="flex items-center space-x-2">
                         <div class="w-2 h-2 rounded-full bg-blue-500"></div>
                         <span class="text-slate-300">Localisation: <span class="text-white">Cotonou, Benin</span></span>
                     </div>
                 </div>
-                <div class="pt-6">
+                <!-- <div class="pt-6">
                     <a href="#"
                         class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg font-medium hover:opacity-90 transition-all duration-300 shadow-lg">
-                        Télécharger mon CV
-                        <i class="fas fa-download ml-2"></i>
+                        Voir ma certification
+                        <i class="fas fa-certificate ml-2"></i>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -340,6 +357,9 @@
                     </div>
                     <div class="tech-icon p-4 bg-slate-800 rounded-lg shadow-md hover:shadow-lg mx-2">
                         <i class="fab fa-npm text-4xl text-red-500"></i>
+                    </div>
+                    <div class="tech-icon p-4 bg-slate-800 rounded-lg shadow-md hover:shadow-lg mx-2">
+                        <i class="fa-brands fa-laravel text-4xl text-red-500"></i>
                     </div>
                     <div class="tech-icon p-4 bg-slate-800 rounded-lg shadow-md hover:shadow-lg mx-2">
                         <i class="fab fa-docker text-4xl text-blue-400"></i>
@@ -679,24 +699,29 @@
                 <div class="pt-6">
                     <h4 class="font-bold mb-4">Réseaux sociaux</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-blue-600 transition-all">
+                        <a href="https://www.linkedin.com/in/aures-assogba-zehe"
+                            class="p-3 bg-slate-800 rounded-lg hover:bg-blue-600 transition-all">
                             <i class="fab fa-linkedin-in text-blue-400"></i>
                         </a>
                         <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-green-400 transition-all">
                             <i class="fab fa-whatsapp text-green-300"></i>
                         </a>
-                        <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-purple-600 transition-all">
+                        <a href="https://github.com/Aures-dev"
+                            class="p-3 bg-slate-800 rounded-lg hover:bg-purple-600 transition-all">
                             <i class="fab fa-github text-purple-400"></i>
                         </a>
                         <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-blue-600 transition-all">
-                            <i class="fa-brands fa-microsoft text-blue-400"></i>
+                            <i class="fa-solid fa-user-group text-blue-400"></i>
                         </a>
                     </div>
                 </div>
             </div>
 
             <div class="bg-slate-800 rounded-xl p-8 shadow-xl">
-                <form id="contact-form" class="space-y-6">
+                <form id="contact-form" class="space-y-6" action="https://formspree.io/f/xrbprgdb" method="POST">
+                    <!-- against spam -->
+                    <input type="checkbox" name="_gotcha" style="display:none !important">
+                    <!-- form main content -->
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
                             <label for="name" class="block text-sm font-medium text-slate-300 mb-1">Nom complet</label>
@@ -740,22 +765,23 @@
                     <p class="text-slate-400 mt-2">Développeur Fullstack innovant et passionné.</p>
                 </div>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-slate-400 hover:text-white transition-colors">
+                    <a href="https://www.linkedin.com/in/aures-assogba-zehe" target="_blank"
+                        class="text-slate-400 hover:text-white transition-colors">
                         <i class="fab fa-linkedin-in text-xl"></i>
                     </a>
                     <a href="#" class="text-slate-400 hover:text-white transition-colors">
+                        <i class="fab fa-whatsapp text-xl"></i>
+                    </a>
+                    <a href="https://github.com/Aures-dev" class="text-slate-400 hover:text-white transition-colors">
                         <i class="fab fa-github text-xl"></i>
                     </a>
                     <a href="#" class="text-slate-400 hover:text-white transition-colors">
-                        <i class="fab fa-twitter text-xl"></i>
-                    </a>
-                    <a href="#" class="text-slate-400 hover:text-white transition-colors">
-                        <i class="fab fa-codepen text-xl"></i>
+                        <i class="fa-solid fa-user-group text-xl"></i>
                     </a>
                 </div>
             </div>
             <div class="border-t border-slate-800 mt-8 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-slate-500 text-sm">© 2023 Aurès Assogba-zehe. Tous droits réservés.</p>
+                <p class="text-slate-500 text-sm">© 2025 Aurès Assogba-zehe. Tous droits réservés.</p>
                 <div class="flex space-x-6 mt-4 md:mt-0">
                     <a href="#" class="text-slate-500 hover:text-slate-300 text-sm">Mentions légales</a>
                     <a href="#" class="text-slate-500 hover:text-slate-300 text-sm">Politique de confidentialité</a>
