--- a/public/index.html
+++ b/public/index.html
@@ -416,230 +416,24 @@
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <!-- Project 1 -->
-            <div class="project-card h-80">
+            <!-- Budget Tracker Project Card -->
+            <div class=" h-80">
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="images/project-ov.png" alt="Projet 1"
-                                class="w-full h-full object-cover contains">
+                            <img src="images/projects/budget-tracker/welcome.png" alt="Budget Tracker - Welcome"
+                                class="w-full h-full object-cover">
                         </div>
-                        <h3 class="text-xl font-bold">Plateforme E-commerce</h3>
-                        <p class="text-slate-400 text-sm">React, Node.js, MongoDB</p>
-                        <button
-                            class="mt-2 px-4 py-2 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg text-sm font-medium hover:opacity-90 transition-all">
+                        <h3 class="text-xl font-bold">Budget Tracker</h3>
+                        <p class="text-slate-400 text-sm">Next.js, Tailwind CSS, MongoDB</p>
+                        <a href="budget-tracker.html"
+                            class="mt-2 px-4 py-2 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg text-sm font-medium hover:opacity-90 transition-all text-center block">
                             Voir les détails
-                        </button>
-                    </div>
-                    <div
-                        class="project-back absolute w-full h-full bg-gradient-to-br from-purple-600 to-pink-600 p-6 flex flex-col justify-center items-center text-center">
-                        <h3 class="text-xl font-bold mb-2">Plateforme E-commerce</h3>
-                        <p class="text-slate-100 mb-4">Solution complète avec paiement en ligne, gestion des stocks et
-                            tableau de bord admin.</p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">React</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Node.js</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">MongoDB</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Stripe</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Redux</span>
-                        </div>
-                        <a href="#"
-                            class="mt-4 px-4 py-2 bg-white text-purple-600 rounded-lg font-medium text-sm hover:bg-purple-50 transition-all">
-                            Visiter le site
                         </a>
-                        <button class="mt-2 text-xs text-white/80 hover:text-white transition-colors">
-                            <i class="fas fa-arrow-left mr-1"></i> Retour
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 2 -->
-            <div class="project-card h-80">
-                <div class="project-inner relative w-full h-full">
-                    <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
-                        <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="images/project-ov.png" alt="Projet 2" class="w-full h-full object-cover">
-                        </div>
-                        <h3 class="text-xl font-bold">Application de gestion</h3>
-                        <p class="text-slate-400 text-sm">Vue.js, Python, PostgreSQL</p>
-                        <button
-                            class="mt-2 px-4 py-2 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg text-sm font-medium hover:opacity-90 transition-all">
-                            Voir les détails
-                        </button>
-                    </div>
-                    <div
-                        class="project-back absolute w-full h-full bg-gradient-to-br from-pink-600 to-purple-600 p-6 flex flex-col justify-center items-center text-center">
-                        <h3 class="text-xl font-bold mb-2">Application de gestion</h3>
-                        <p class="text-slate-100 mb-4">Outil complet pour la gestion de projets avec calendrier, tâches
-                            et collaboration d'équipe.</p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Vue.js</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Python</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">PostgreSQL</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Django</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Vuex</span>
-                        </div>
-                        <a href="#"
-                            class="mt-4 px-4 py-2 bg-white text-pink-600 rounded-lg font-medium text-sm hover:bg-pink-50 transition-all">
-                            Visiter le site
-                        </a>
-                        <button class="mt-2 text-xs text-white/80 hover:text-white transition-colors">
-                            <i class="fas fa-arrow-left mr-1"></i> Retour
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 3 -->
-            <div class="project-card h-80">
-                <div class="project-inner relative w-full h-full">
-                    <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
-                        <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="images/project-ov.png" alt="Projet 3" class="w-full h-full object-cover">
-                        </div>
-                        <h3 class="text-xl font-bold">Réseau social</h3>
-                        <p class="text-slate-400 text-sm">React, GraphQL, Firebase</p>
-                        <button
-                            class="mt-2 px-4 py-2 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg text-sm font-medium hover:opacity-90 transition-all">
-                            Voir les détails
-                        </button>
-                    </div>
-                    <div
-                        class="project-back absolute w-full h-full bg-gradient-to-br from-indigo-600 to-purple-600 p-6 flex flex-col justify-center items-center text-center">
-                        <h3 class="text-xl font-bold mb-2">Réseau social</h3>
-                        <p class="text-slate-100 mb-4">Plateforme de mise en relation avec messagerie instantanée,
-                            publications et notifications.</p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">React</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">GraphQL</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Firebase</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Apollo</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Material UI</span>
-                        </div>
-                        <a href="#"
-                            class="mt-4 px-4 py-2 bg-white text-indigo-600 rounded-lg font-medium text-sm hover:bg-indigo-50 transition-all">
-                            Visiter le site
-                        </a>
-                        <button class="mt-2 text-xs text-white/80 hover:text-white transition-colors">
-                            <i class="fas fa-arrow-left mr-1"></i> Retour
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 4 -->
-            <div class="project-card h-80">
-                <div class="project-inner relative w-full h-full">
-                    <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
-                        <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="images/project-ov.png" alt="Projet 4" class="w-full h-full object-cover">
-                        </div>
-                        <h3 class="text-xl font-bold">Tableau de bord analytique</h3>
-                        <p class="text-slate-400 text-sm">Vue.js, D3.js, Express</p>
-                        <button
-                            class="mt-2 px-4 py-2 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg text-sm font-medium hover:opacity-90 transition-all">
-                            Voir les détails
-                        </button>
-                    </div>
-                    <div
-                        class="project-back absolute w-full h-full bg-gradient-to-br from-blue-600 to-indigo-600 p-6 flex flex-col justify-center items-center text-center">
-                        <h3 class="text-xl font-bold mb-2">Tableau de bord analytique</h3>
-                        <p class="text-slate-100 mb-4">Visualisation de données complexes avec graphiques interactifs et
-                            export PDF/Excel.</p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Vue.js</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">D3.js</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Express</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Chart.js</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">MongoDB</span>
-                        </div>
-                        <a href="#"
-                            class="mt-4 px-4 py-2 bg-white text-blue-600 rounded-lg font-medium text-sm hover:bg-blue-50 transition-all">
-                            Visiter le site
-                        </a>
-                        <button class="mt-2 text-xs text-white/80 hover:text-white transition-colors">
-                            <i class="fas fa-arrow-left mr-1"></i> Retour
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 5 -->
-            <div class="project-card h-80">
-                <div class="project-inner relative w-full h-full">
-                    <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
-                        <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="images/project-ov.png" alt="Projet 5" class="w-full h-full object-cover">
-                        </div>
-                        <h3 class="text-xl font-bold">Application mobile</h3>
-                        <p class="text-slate-400 text-sm">React Native, Firebase</p>
-                        <button
-                            class="mt-2 px-4 py-2 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg text-sm font-medium hover:opacity-90 transition-all">
-                            Voir les détails
-                        </button>
-                    </div>
-                    <div
-                        class="project-back absolute w-full h-full bg-gradient-to-br from-yellow-600 to-orange-600 p-6 flex flex-col justify-center items-center text-center">
-                        <h3 class="text-xl font-bold mb-2">Application mobile</h3>
-                        <p class="text-slate-100 mb-4">Application cross-platform pour la gestion de petites annonces
-                            avec géolocalisation.</p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">React Native</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Firebase</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Redux</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Expo</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Google Maps</span>
-                        </div>
-                        <a href="#"
-                            class="mt-4 px-4 py-2 bg-white text-yellow-600 rounded-lg font-medium text-sm hover:bg-yellow-50 transition-all">
-                            Télécharger
-                        </a>
-                        <button class="mt-2 text-xs text-white/80 hover:text-white transition-colors">
-                            <i class="fas fa-arrow-left mr-1"></i> Retour
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 6 -->
-            <div class="project-card h-80">
-                <div class="project-inner relative w-full h-full">
-                    <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
-                        <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="images/project-ov.png" alt="Projet 6" class="w-full h-full object-cover">
-                        </div>
-                        <h3 class="text-xl font-bold">Portfolio artistique</h3>
-                        <p class="text-slate-400 text-sm">Next.js, Tailwind CSS, Sanity</p>
-                        <button
-                            class="mt-2 px-4 py-2 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg text-sm font-medium hover:opacity-90 transition-all">
-                            Voir les détails
-                        </button>
-                    </div>
-                    <div
-                        class="project-back absolute w-full h-full bg-gradient-to-br from-purple-700 to-indigo-700 p-6 flex flex-col justify-center items-center text-center">
-                        <h3 class="text-xl font-bold mb-2">Portfolio artistique</h3>
-                        <p class="text-slate-100 mb-4">Galerie en ligne avec système de gestion de contenu pour artistes
-                            et photographes.</p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Next.js</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Tailwind</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Sanity</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Framer Motion</span>
-                            <span class="px-2 py-1 bg-white/10 rounded-full text-xs">Cloudinary</span>
-                        </div>
-                        <a href="#"
-                            class="mt-4 px-4 py-2 bg-white text-purple-700 rounded-lg font-medium text-sm hover:bg-purple-50 transition-all">
-                            Visiter le site
-                        </a>
-                        <button class="mt-2 text-xs text-white/80 hover:text-white transition-colors">
-                            <i class="fas fa-arrow-left mr-1"></i> Retour
-                        </button>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="text-center mt-16">
             <a href="#"
                 class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-purple-600 to-pink-600 rounded-lg font-medium hover:opacity-90 transition-all duration-300 shadow-lg">
